syntax = "proto3";
import "protos/changemanagement.proto";

option csharp_namespace = "RedflyDatabaseSyncProxy.Protos.SqlServer";

package changemanagement;

// The NativeGrpcSqlServerChakraService service definition.
service NativeGrpcSqlServerChakraService {
  // Starts the change management process for a client.
  rpc StartChakraSync(StartChakraSyncRequest) returns (StartChakraSyncResponse);
  // Stops the change management process for a client.
  rpc StopChakraSync(StopChakraSyncRequest) returns (StopChakraSyncResponse);
  // Bi-directional stream for server to client callbacks.
  rpc CommunicateWithClient(stream ClientMessage) returns (stream ServerMessage);
  // Regular status request from client to server
  rpc GetChakraSyncStatus(GetChakraSyncStatusRequest) returns (GetChakraSyncStatusResponse);
}

// The request message containing the client's information.
message StartChakraSyncRequest {
  string client_session_id = 1;
  string encryptedDatabaseServerName = 2;
  string encryptedServerOnlyConnectionString = 3;
  string encryptedClientId = 4;
  string encryptedClientName = 5;
  string encryptedDatabaseId = 6;
  string encryptedDatabaseName = 7;
  string encryptionKey = 8;
}
